kube/mypod.yaml
apiVersion: v1
kind: Pod
metadata:
 name: nginx
spec:
 containers:
  - name: nginx
    image: nginx:alpine
    ports:
     - containerPort: 80
