kube/myingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dyma-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  #ingressClassName: dyma-ingress-classe
  rules:
   - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
